fix threatbar hidden behind status bar

--- a/src/client/components/threatbar/threatbar.css
+++ b/src/client/components/threatbar/threatbar.css
@@ -1,7 +1,7 @@
 .threat-bar {
   position: fixed;
   right: 310px;
-  height: 100%;
+  max-height: 100%;
   width: 500px;
   overflow-y: auto;
 
